# pkg/controller/auth.go
@@ -1,0 +1,86 @@
+package controller
+
+import (
+	"net/http"
+
+	"weave/pkg/common"
+	"weave/pkg/model"
+	"weave/pkg/service"
+
+	"github.com/gin-gonic/gin"
+)
+
+type AuthController struct {
+	userService model.UserService
+	jwtService  *service.JWTService
+}
+
+func NewAuthController(userService model.UserService, jwtService *service.JWTService) *AuthController {
+	return &AuthController{
+		userService: userService,
+		jwtService:  jwtService,
+	}
+}
+
+// @Summary Login
+// @Description Create user and storage
+// @Accept json
+// @Produce json
+// @Tags auth
+// @Param user body model.AuthUser true "auth user info"
+// @Success 200 {object} common.Response{data=model.JWTToken}
+// @Router /login [post]
+func (ac *AuthController) Login(c *gin.Context) {
+	auser := new(model.AuthUser)
+	if err := c.BindJSON(auser); err != nil {
+		common.ResponseFailed(c, http.StatusBadRequest, err)
+		return
+	}
+
+	user, err := ac.userService.Auth(auser)
+	if err != nil {
+		common.ResponseFailed(c, http.StatusUnauthorized, err)
+		return
+	}
+
+	token, err := ac.jwtService.CreateToken(user)
+	if err != nil {
+		common.ResponseFailed(c, http.StatusInternalServerError, err)
+		return
+	}
+
+	common.ResponseSuccess(c, model.JWTToken{
+		Token:    token,
+		Describe: "set token in Authorization Header, [Authorization: Bearer {token}]",
+	})
+}
+
+// @Summary Register user
+// @Description Create user and storage
+// @Accept json
+// @Produce json
+// @Tags auth
+// @Param user body model.CreatedUser true "user info"
+// @Success 200 {object} common.Response{data=model.User}
+// @Router /register [post]
+func (ac *AuthController) Register(c *gin.Context) {
+	createdUser := new(model.CreatedUser)
+	if err := c.BindJSON(createdUser); err != nil {
+		common.ResponseFailed(c, http.StatusBadRequest, err)
+		return
+	}
+
+	user := createdUser.GetUser()
+	if err := ac.userService.Validate(user); err != nil {
+		common.ResponseFailed(c, http.StatusBadRequest, err)
+		return
+	}
+
+	ac.userService.Default(user)
+	user, err := ac.userService.Create(user)
+	if err != nil {
+		common.ResponseFailed(c, http.StatusInternalServerError, err)
+	}
+
+	common.ResponseSuccess(c, user)
+}
