# pkg/model/token.go
@@ -1,0 +1,6 @@
+package model
+
+type JWTToken struct {
+	Token    string `json:"token"`
+	Describe string `json:"describe"`
+}
